# wycliffepeart

./: .env.example  .gitignore  AGENT.md  README.md  docs.md  eslint.config.mjs  moon.yml  package-lock.json  package.json  profile.html  pyproject.toml  resume.html
.github/workflows/: generate-linkedin-post.yml
.moon/: toolchain.yml  workspace.yml
app/: README.md  docs.md
app/assets/: social-preview.html
app/scripts/: __init__.py
app/terraform/: README.md
apps/wp-profile/: docs.md  moon.yml  profile.html
apps/wp-profile/blog/: index.html
apps/wp-profile/terraform/: README.md  main.tf  outputs.tf
blog/: index.html
content/blog/: sql-joins.mdx
content/linkedin/: posts.json
prompts/: linkedin-post-generator.md  linkedin-post-generator.txt
scripts/: cli.py  codex_json.py  env_utils.py  github_publish.py  linkedin_carousel.py  logging_utils.py  posts.py  resume_to_pdf.py  site_build.py
shelly/: resume.html
site/: package-lock.json  package.json
site/src/lib/: resume-data.ts  theme.ts
site/src/styles/: blog.css
src/app/: layout.tsx  page.tsx
src/app/blog/: page.tsx
src/components/blog/: TableOfContents.tsx
src/components/home/: BlogPreviewSection.tsx  (+7 more)
src/lib/: blog.ts  toc.ts
src/styles/: blog.css  home.css  resume.css
templates/design/: 1.html  10.html  11-gloss-dark.html  11-gloss.html  12.html  13.html  14.html  15.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: test_cli.py  test_codex_json.py
(+29 files in other folders)
