[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wycliffepeart-profile"
version = "0.1.0"
description = "Developer profile website deployment utilities."
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.45",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
wp = "scripts.cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
